remove child element that has links from parents
